fix deprecated classes usage + align implementations and unit tests in certificate/revocation sources